--- a/EcShop/EC模板/1.变量输出.md
+++ b/EcShop/EC模板/1.变量输出.md
@@ -19,10 +19,31 @@ Hello,{$name}！
 
 这样，运行的时候就会在模板中显示： `Hello,LinWu！`
 
-标签默认开始标记是{，结束标记是 }。也可以通过设置进行更改。例如，我们在 `cls_template` 类初始化时这样设置：
+EC模板标签开始标记是{，结束标记是 }，不可以重新设置。
 
+模板标签的变量输出根据变量类型有所区别，刚才我们输出的是字符串变量，如果是数组变量：
 
+```php
+$data['name'] = 'ThinkPHP';
+$data['email'] = 'thinkphp@qq.com';
+$smarty->assign('data',$data);
+```
 
+那么，在模板中我们可以用下面的方式输出：
+
+```html
+Name：{$data.name}
+Email：{$data.email}
+```
+
+或者用下面的方式也是有效（记住，数组方式输出，中括号内不能有引号）：
+
+```html
+Name：{$data[name]}
+Email：{$data[email]}
+```
+
+以上两种输出方式，均支持二维数组的输出。
 
 
 
